chore: native image config changes